# epub-iterator

./: .gitignore  README.md  example.py  pyproject.toml
epub_iterator/: __init__.py  epub_iterator.py
