[tool.poetry]
name = "epub-iterator"
version = "0.1.0"
description = ""
authors = ["Vuizur <Vuizur@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "epub_iterator"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
